--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.isort]
 profile = "black"
-line_length = 79
+line_length = 120
 known_first_party = ["taskCloud"]
 multi_line_output = 3
 include_trailing_comma = true
@@ -8,6 +8,6 @@ force_grid_wrap = 0
 use_parentheses = true
 
 [tool.black]
-line-length = 79
+line-length = 120
 target-version = ['py39']
-skip-string-normalization = false
+skip-string-normalization = true
