--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
+black==25.1.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
 exceptiongroup==1.2.2
+flake8==7.2.0
 idna==3.10
 iniconfig==2.1.0
+isort==6.0.1
 load-dotenv==0.1.0
+mccabe==0.7.0
+mypy==1.15.0
+mypy-extensions==1.0.0
 packaging==24.2
+pathspec==0.12.1
+platformdirs==4.3.7
 pluggy==1.5.0
+pycodestyle==2.13.0
+pyflakes==3.3.2
 pytest==8.3.5
 python-dotenv==1.1.0
 requests==2.32.3
 tomli==2.2.1
+types-requests==2.32.0.20250328
+typing_extensions==4.13.2
 urllib3==2.4.0
