--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 black==25.1.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -16,11 +17,15 @@ pathspec==0.12.1
 platformdirs==4.3.7
 pluggy==1.5.0
 pycodestyle==2.13.0
+pydantic==2.11.3
+pydantic-settings==2.9.1
+pydantic_core==2.33.1
 pyflakes==3.3.2
 pytest==8.3.5
 python-dotenv==1.1.0
 requests==2.32.3
 tomli==2.2.1
 types-requests==2.32.0.20250328
+typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
